--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,24 @@
 
 /* Your CSS Code here. */
+.holder {
+	display: flex;
+	justify-content: space-between;
+	flex-flow: row wrap;
+}
+.item {
+	width: 100px;
+	height: 100px;
+	font-size: 40px;
+}
+
+.red {
+	background-color: red;
+}
+
+.green {
+	background-color: green;
+}
+
+.blue {
+	background-color: blue;
+}
